# trust_gateway

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  nats-server.conf  start_dev.sh
.keys/: grant_signing.pem  (+1 more)
agent_in_a_box/: Cargo.toml  Makefile
agent_in_a_box/acl_store/: Cargo.toml
agent_in_a_box/acl_store/src/: lib.rs
agent_in_a_box/host/: Cargo.toml  config.json  inspect_kv.rs  keys.json  output.txt  test_dto.rs
agent_in_a_box/host/config/: components.toml  policy.toml  server.keys
agent_in_a_box/host/inspect_kv/: Cargo.toml
agent_in_a_box/host/scratch/: gen_token.rs
agent_in_a_box/host/src/: audit.rs  bindings.rs  commands.rs  dto.rs  init.rs  lib.rs  linker.rs  logic.rs  main.rs  registry.rs  shared_state.rs  telegram_transport.rs  test_helpers.rs
agent_in_a_box/host/src/auth/: authenticator.rs  contracts.rs  dtos.rs  handlers.rs  logic.rs  mod.rs  vault.rs
agent_in_a_box/host/src/handlers/: acl.rs  agent.rs  api.rs  beacon.rs  identity.rs  messaging.rs  mod.rs  oid4vp.rs  persistence.rs  routing.rs  vault.rs
agent_in_a_box/host/src/loops/: acl_loop.rs  contact_loop.rs  escalation.rs  identity_loop.rs  messaging_loop.rs  mod.rs  routing.rs  vault_loop.rs
agent_in_a_box/identity_server/: Cargo.toml
agent_in_a_box/identity_server/src/: lib.rs
agent_in_a_box/scripts/: INSPECT_VAULT.sh  init_global_infra.sh  reset_nats_kv.sh
agent_in_a_box/ssi_crypto/: Cargo.toml
agent_in_a_box/ssi_crypto/src/: blind.rs  did.rs  did_document.rs  encryption.rs  lib.rs  signing.rs  ucan.rs
agent_in_a_box/ssi_vault/: Cargo.toml
agent_in_a_box/ssi_vault/src/: lib.rs  lib.rs.patch
agent_in_a_box/ssi_vault/src/commands/: create_identity.rs  jwt.rs  mod.rs  set_recovery.rs  unlock_vault.rs
agent_in_a_box/wit/: sovereign.wit
agents/ssi_agent/: Cargo.toml
agents/ssi_agent/configuration/: agent_identity_config.toml  mcp_runtime_config.toml  policy.json
agents/ssi_agent/ssi_identity_agent/: Cargo.toml  launch_ssi_identity_agent.sh
agents/ssi_agent/ssi_identity_agent/src/: auth_config.rs  discovery.rs  lib.rs  secure_agent_server.rs
agents/ssi_agent/ssi_mcp_runtime/: Cargo.toml
agents/ssi_agent/ssi_mcp_runtime/src/: lib.rs
execution_plane/connector_mcp_server/: Cargo.toml
execution_plane/connector_mcp_server/src/: main.rs  oauth.rs  token_store.rs  tools.rs
execution_plane/executor_host/: Cargo.toml
execution_plane/executor_host/src/: connectors.rs  jetstream_nonce_store.rs  main.rs  native_tools.rs  runtime.rs  token_store.rs  vp.rs
execution_plane/native_skill_executor/: Cargo.toml
execution_plane/native_skill_executor/skills/claw_extract_content_from_url/: README.md  manifest.json  run.sh
execution_plane/native_skill_executor/skills/claw_hello_world/: README.md  run.sh
execution_plane/native_skill_executor/skills/claw_weather/: README.md  run.sh
execution_plane/native_skill_executor/src/: executor.rs  grant_validator.rs  main.rs  nonce_store.rs  registry.rs
execution_plane/shared_libs/community_adapters/: Cargo.toml
execution_plane/shared_libs/community_adapters/src/: credentials.rs  identity.rs  lib.rs  notifier.rs  tenant.rs  transport.rs
execution_plane/shared_libs/identity_context/: Cargo.toml
execution_plane/shared_libs/identity_context/src/: did.rs  jwt.rs  lib.rs  meta.rs  models.rs  secrets.rs  source.rs
execution_plane/shared_libs/ssi_mcp_runtime/: Cargo.toml  test_rmcp.rs
execution_plane/shared_libs/ssi_mcp_runtime/src/: audit.rs
execution_plane/shared_libs/trust_auth/: Cargo.toml
execution_plane/shared_libs/trust_auth/src/: auth_method.rs  did.rs  lib.rs  policy_sig.rs  resolver.rs  session_claims.rs
execution_plane/shared_libs/trust_core/: Cargo.toml
execution_plane/shared_libs/trust_core/snapshots/: action_request.json  action_result.json  actor_context.json  approval_request.json  audit_event.json  execution_grant.json
execution_plane/shared_libs/trust_core/src/: action.rs  actor.rs  agent.rs  approval.rs  audit.rs  auth.rs  canonical_json.rs  decision.rs  egress_filter.rs  egress_validator.rs  envelope.rs  errors.rs  executor.rs  grant.rs  grant_validator.rs  lib.rs  normalizer.rs  ports.rs  ports_dto.rs  proof.rs  schema_validator.rs  skill.rs  snapshots.rs  tool_registry.rs  traits.rs
execution_plane/shared_libs/trust_policy/: Cargo.toml
execution_plane/shared_libs/trust_policy/src/: config.rs  engine.rs  lib.rs  matcher.rs  rules.rs
execution_plane/trust_gateway/: Cargo.toml
execution_plane/trust_gateway/config/: agents.toml  oauth_clients.toml  policy.toml
execution_plane/trust_gateway/src/: agent_api.rs  agent_registry.rs  amount_extractor.rs  api.rs  approval_daemon.rs  approval_http.rs  approval_store.rs  audit_projector.rs  audit_sink.rs  auth.rs  cron_scheduler.rs  gateway.rs  grant.rs  lib.rs  main.rs  mcp_sse.rs  meta_identity.rs  normalizer.rs  policy_api.rs  policy_fingerprint.rs  router.rs  source_registry.rs  standalone_registry.rs  transport_normalizer.rs  vp_verifier.rs  webhook_handler.rs
execution_plane/trust_gateway/src/oauth/: authorize.rs  config.rs  consent.rs  discovery.rs  mod.rs  store.rs  token.rs
execution_plane/vp_mcp_server/: Cargo.toml  config.json  sample_call.md  test_config.json
execution_plane/vp_mcp_server/src/: bin_test.rs  grant_validator.rs  main.rs
execution_plane/vp_mcp_server/src/services/: mod.rs  search.rs  weather.rs
execution_plane/vp_mcp_server/src/ssi/: auth.rs  middleware.rs  mod.rs  types.rs  ucan.rs
platform/global_domain/public_gateway/: Cargo.toml  gateway.key
platform/global_domain/public_gateway/src/: blind_mailbox.rs  main.rs  outbound.rs  rate_limiter.rs  tenant_router.rs  ws_relay.rs
platform/global_domain/public_gateway/tests/: jit_routing_test.rs
platform/tenant_registry/: Cargo.toml
platform/tenant_registry/src/: anchoring.rs  audit_api.rs  handlers.rs  main.rs  models.rs  provisioner.rs  store.rs
portals/local_ssi_portal/: Cargo.toml  Trunk.toml  check_out.txt  config.json  index.html
portals/local_ssi_portal/src/: api.rs  auth.rs  main.rs  nats_ws.rs  types.rs  utils.rs
(+95 files in other folders)
