[workspace]
resolver = "2"
members = [
    "host",
    "acl_store",
    "ssi_vault",
    "ssi_crypto",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = { version = "25.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "25.0.0"
wasmtime-wasi-http = "25.0.0"
wit-bindgen = "0.46.0"
ssi = { git = "https://github.com/spruceid/ssi.git", default-features = false, features = ["dif"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
