[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "25.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "25.0.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2.5"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
hex = "0.4"
getrandom = "0.2"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
lazy_static = "1.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
async-nats = "0.37"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
ssi = { workspace = true }
chacha20poly1305 = "0.10"
rand = "0.8"
config = "0.13"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
toml = "0.8"
argon2 = "0.5"
ssi_crypto = { path = "../ssi_crypto" }
trust_core = { path = "../../execution_plane/shared_libs/trust_core" }
async-trait = "0.1"
jsonwebtoken = "9.3"
identity_context = { path = "../../execution_plane/shared_libs/identity_context" }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
default = []
messaging = []
