[package]
name = "identity_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
webauthn-rs-proto = "0.4"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
ed25519-dalek = "2.2"
base64 = "0.21"
hex = "0.4"
tracing = "0.1"

[package.metadata.component]
package = "sovereign:identity-server"
