[package]
name = "ssi_crypto"
version = "0.1.0"
edition = "2021"
description = "Shared cryptographic primitives for the Agent-in-a-Box platform"

[lib]
crate-type = ["lib"]

[dependencies]
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
curve25519-dalek = { version = "4", default-features = false }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"

[dev-dependencies]
# Tests only
