[package]
name = "connector_mcp_server"
version = "0.1.0"
edition = "2021"
description = "OAuth connector MCP server — tenant-scoped third-party integrations"

[dependencies]
identity_context = { path = "../shared_libs/identity_context" }
# Domain types and grant validation
trust_core = { path = "../shared_libs/trust_core" }
tenant_context = { path = "../../platform/tenant_context" }
# JWT validation (RULE[010_JWT_CONTRACTS.md])
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.38"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
