[package]
name = "executor_host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.37"
clap = { version = "4.0", features = ["derive", "env"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
nix = { version = "0.27", features = ["process", "signal", "user"] }
futures = "0.3"
dotenvy = "0.15"
urlencoding = "2.1"

# Local dependencies
trust_core = { path = "../shared_libs/trust_core" }
identity_context = { path = "../shared_libs/identity_context" }
trust_auth = { path = "../shared_libs/trust_auth" }

[features]
default = []
