[package]
name = "vp_mcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.3", features = ["server-side-http", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
axum = "0.8"
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
schemars = "1.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
config = "0.13"
reqwest = { version = "0.13", features = ["json"] }
async-nats = "0.38"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }

# SSI Delegation Dependencies
ed25519-dalek = "2.1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
ssi_crypto = { path = "../../agent_in_a_box/ssi_crypto" }
dotenvy = "0.15"
