[package]
name = "tenant_registry"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant control plane: tenant CRUD, NATS provisioning, KV namespace management"

[dependencies]
tenant_context = { path = "../tenant_context" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-nats = "0.38"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
futures = "0.3"
sha2 = "0.10"
dotenvy = "0.15.7"
