[package]
name = "ssi_identity_agent"
version = "0.1.0"
edition = "2024"


[dependencies]
agent_models={git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}
agent_core={git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}
configuration={git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}
llm_api = {git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}

#mcp_runtime={git = "https://github.com/fcn06/swarm.git"}
ssi_mcp_runtime={ workspace = true }
identity_context = { path = "../../../execution_plane/shared_libs/identity_context" }


# To be modified if you want to point out to other implementation of Memory, Evaluation, Discovery Services
#agent_discovery_service = {git = "https://github.com/fcn06/swarm_services.git"}
#agent_evaluation_service = {git = "https://github.com/fcn06/swarm_services.git"}
#agent_memory_service = {git = "https://github.com/fcn06/swarm_services.git"}
#agent_service_adapters={git = "https://github.com/fcn06/swarm_services.git"}


tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
async-trait = { version = "0.1"}
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
toml = "0.9"

#a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing"]  , rev="b2d8dbf9ef0c4e5a317b63e1bbb2e092d61c0e04" }
a2a-rs = { version="0.2",  features = ["http-server", "http-client"] }

axum = "0.8"
async-nats = "0.37"

#jsonwebtoken = { version = "10" }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

oauth2 = { version = "5" }
openidconnect = { version = "4" }

chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
lazy_static = "1.4"  # Used for static request ID storage in message_handler
regex = "1.10"  # Used for text parsing in improved handler
uuid = { version = "1", features = ["v4","serde"] }
base64 = "0.22"
url = { version = "2.4", features = ["serde"] }

bon = "3"
schemars = { version = "1.0",  features = ["chrono04"] }

redb="3.1"

reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rustls="0.23"

thiserror = "2"
dotenvy = "0.15"


[[bin]]
name = "launch_identity_agent"
path = "bin/launch_ssi_identity_agent.rs"

[[bin]]
name = "simple_client_agent"
path = "bin/simple_agent_client.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
