[package]
name = "identity_context"
version = "0.1.0"
edition = "2021"
description = "Identity extraction, _meta validation, JWT introspection, and source context for the Trust Gateway"

[lib]
crate-type = ["lib"]

[dependencies]
trust_core = { path = "../trust_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
