[package]
name = "ssi_mcp_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
#llm_api = { workspace = true }
#configuration = { workspace = true }
#rmcp = { workspace = true }
configuration={git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}
llm_api = {git = "https://github.com/fcn06/swarm_commons.git", rev = "ac6bcf1154675cda3999344a9907e7c303e3d3f9"}

rmcp = { version = "1.3", features = ["client", "client-side-sse", "auth", "transport-streamable-http-client-reqwest"] }

#schemars = { workspace = true }
schemars = { version = "1.0",  features = ["chrono04"] }

#reqwest = { workspace = true }
#rustls = { workspace = true }
reqwest = { version = "0.13", features = ["json","rustls"] }
rustls="0.23"

#toml = { workspace = true }
toml = "0.9"

#tokio = { workspace = true }
#futures = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

#serde = { workspace = true }
#serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"

#anyhow = { workspace = true }
anyhow = "1.0"

#tracing = { workspace = true }
#tracing-subscriber = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }


#axum = { workspace = true }
axum = "0.8"

#uuid={ workspace = true }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"

#rand = { workspace = true }
#chrono = { workspace = true }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
async-nats = "0.41"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

[[bin]]
name = "mcp_nats_bridge"
path = "bin/mcp_nats_bridge.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
