[package]
name = "trust_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
trust_core = { path = "../trust_core" }
identity_context = { path = "../identity_context" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
tracing = "0.1"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
sha2 = "0.11.0"
reqwest = { version = "0.13", features = ["json"] }
ssi_crypto = { path = "../../../agent_in_a_box/ssi_crypto" }
hex = "0.4.3"
bs58 = "0.5.1"
async-nats = "0.37"
