[package]
name = "trust_policy"
version = "0.1.0"
edition = "2021"
description = "Attribute-based policy engine for the Sovereign Trust Gateway"

[lib]
crate-type = ["lib"]

[dependencies]
trust_core = { path = "../trust_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
